Fixed iOS image flicker

--- a/example/src/css/App.css
+++ b/example/src/css/App.css
@@ -14,13 +14,18 @@ div.app {
   width: 100vw;
   height: 100vh;
 }
-div.app::before {
-  content: "a";
-  color: transparent;
+div.cards-demo-loading::before {
+  content: "Cards Demo";
   position: absolute;
+  text-align: center;
+  display: flex;
   top: 0;
   left: 0;
   width: 100vw;
   height: 64px;
   background-color: rgba(254, 226, 85);
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 1.5em;
 }
